--- a/app/assets/javascripts/spa-demo/pages/subjects_page.html
+++ b/app/assets/javascripts/spa-demo/pages/subjects_page.html
@@ -7,6 +7,9 @@
                position="left">
 
         <sd-tabs>
+          <sd-tab label="Museums">
+            <sd-current-museums></sd-current-museums>
+          </sd-tab>
           <sd-tab label="Things">
             <sd-current-things></sd-current-things>
           </sd-tab>
@@ -22,6 +25,9 @@
                position="left">
 
         <sd-tabs>
+          <sd-tab label="Museum">
+            <sd-current-museum-info></sd-current-museum-info>
+          </sd-tab>
           <sd-tab label="Thing">
             <sd-current-thing-info></sd-current-thing-info>
           </sd-tab>
@@ -45,11 +51,17 @@
           <sd-tab label="Map">
             <sd-current-subjects-map></sd-current-subjects-map>
           </sd-tab>
+          <sd-tab label="Museums">
+            <sd-current-museums></sd-current-museums>
+          </sd-tab>
           <sd-tab label="Things">
             <sd-current-things></sd-current-things>
           </sd-tab>
           <sd-tab label="Images">
             <sd-current-images></sd-current-images>
+          </sd-tab>
+          <sd-tab label="Museum">
+              <sd-current-museum-info></sd-current-museum-info>
           </sd-tab>
           <sd-tab label="Thing">
               <sd-current-thing-info></sd-current-thing-info>
